# diagnostics-standalone

./: CMakeLists.txt  README.md  opmEikonal.m
src/: AnisotropicEikonal.cpp  AnisotropicEikonal.hpp  GridHelpers.cpp  GridHelpers.hpp  GridUtilities.cpp  GridUtilities.hpp  RootFinders.hpp  SparseTable.hpp  compute_eikonal_from_files.cpp  grid.c
